Description of incorrect solvation
As task was solved incorrectly, changed the description.

--- a/JupyterNB_demo.ipynb
+++ b/JupyterNB_demo.ipynb
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The task is solved!"
+    "The task is solved, but incorrectly!"
    ]
   }
  ],
